--- a/classNotes/7-strings/slides-7-strings.Rmd
+++ b/classNotes/7-strings/slides-7-strings.Rmd
@@ -15,6 +15,9 @@ If you haven't already, install the **stringr** library:
 install.packages("stringr")
 library(stringr)
 ```
+```{r echo=FALSE}
+library(stringr)
+```
 
 ---
 # Making a string
@@ -86,28 +89,32 @@ head(fruit)
 
 Most start with "`str_`":
 
-Function       | Description                            
----------------|-----------------------------------------
-`str_length()` | number of characters                    
-`str_c()`      | string concatenation                    
-`str_sub()`    | extracts substrings                     
-`str_dup()`    | duplicates characters                   
-`str_pad()`    | pads a string                           
-`str_trim()`   | removes leading and trailing whitespace 
+Function        | Description                            
+----------------|-----------------------------------------
+`str_length()`  | number of characters                    
+`str_sub()`     | extracts substrings
+`str_dup()`     | duplicates characters
+`str_c()`       | string concatenation   
+`str_trim()`    | removes leading and trailing whitespace 
+`str_pad()`     | pads a string
+`str_()`        | pads a string
+`str_sort()`    | sort a string alphabetically
+`str_order()`   | get the order of a sorted string 
+`str_split()`   | split a string into a vector
+`str_detect()`  | match a string in another string 
+`str_replace()` | replace a string in another string
 
 ---
-# `str_length()`Get the number of characters: 
+# `str_length()`: Get the number of characters in a string
 
 ```{r}
+str_length(" ")
+str_length("hello world")
 str_length("The quick brown fox jumped over the lazy dog")
 ```
 
-
-
-
-
-
-You can access individual character using `str_sub()`. It takes three arguments: a string (or character vector), a `start` position, and an `end` position. Either position can either be a positive integer, which counts from the left, or a negative integer which counts from the right. The positions are inclusive, and if longer than the string, will be silently truncated.
+---
+# `str_sub()`: Access characters by their index
 
 ```{r}
 x <- "Apple"
@@ -116,62 +123,84 @@ str_sub(x, 1, 3)
 str_sub(x, -3, -1)
 ```
 
-Note that `str_sub()` won't fail if the string is too short: it will just return as much as possible:
-
+--
+If string is too short, it won't error:
 ```{r}
 str_sub("App", 1, 5)
 ```
 
-You can also use the assignment form of `str_sub()` to modify specific elements in strings:
-
+--
+Use `str_sub()` to modify a string:
 ```{r}
-x <- 'abcdefghijklmnopqrstuvwxyz'
-str_sub(x, 5, 5) <- 'E'
+x <- 'abcdef'
+str_sub(x, 1, 3) <- 'ABC'
 x
 ```
-To duplicate strings, use `str_dup()`:
 
+---
+# `str_dup()`: Like `rep()` but for strings
+
+--
 ```{r}
 str_dup("hola", 3)
 ```
 
-Most `stringr` functions also work on string vectors:
+--
+Note the difference with `rep()` (which creates a vector):
+```{r}
+rep("hola", 3)
+```
+
+---
+# Most `stringr` functions work on string vectors
 
 ```{r}
-x <- c("abcdef", "ghifjk")
+x <- c("apples", "oranges")
+x
 ```
+
+--
+Get the 3rd letter in each string in the vector
 ```{r}
-# Get the 3rd letter in each string in the vector
 str_sub(x, 3, 3)
 ```
+
+--
+Duplicate each string twice
 ```{r}
-# Duplicate each string twice
 str_dup(x, 2)
 ```
 
-## Concatenating with `str_c()`
+---
+# `str_c()`: Combine strings into one string
 
-To combine two or more strings, use `str_c()`:
-
+--
 ```{r}
 str_c('x', 'y', 'z')
 ```
 
+--
 Use the `sep` argument to control how they're separated:
-
 ```{r}
 str_c('x', 'y', 'z', sep = "-")
 ```
 
-You can also concatenate a _vector_ of strings by adding the `collapse` argument to the `str_c()` function:
-
+--
+Note the difference with _vectors_ of strings:
 ```{r}
-str_c(letters)
-str_c(letters, collapse = '')
-str_c(letters, collapse = '-')
+x <- c('x', 'y', 'z')
+str_c(x)
+```
+--
+To make a single string from a vector of strings, use `collapse`:
+```{r}
+str_c(x, collapse = '')
 ```
 
-Objects of length `0` are silently dropped. This is particularly useful in conjunction with `if` statements:
+---
+# Practice: Think-Pair-Share
+
+[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
 
 ```{r}
 printGreeting <- function(name, timeOfDay, isBirthday) {
@@ -186,147 +215,157 @@ printGreeting <- function(name, timeOfDay, isBirthday) {
     cat(greeting)
 }
 ```
-```{r}
+What will this print?
+```{r, eval=FALSE}
+printGreeting('John', 'morning', isBirthday = FALSE)
+printGreeting('John', 'morning', isBirthday = TRUE)
+```
+```{r, echo=FALSE}
 printGreeting('John', 'morning', isBirthday = FALSE)
 printGreeting('John', 'morning', isBirthday = TRUE)
 ```
 
-## Whitespace
-
-Three functions add, remove, or modify whitespace.
-
-### `str_pad()`
-
-`str_pad()` pads a string to a fixed length by adding extra whitespace on
-the left, right, or both sides.
-
-```{r}
-x <- c("abc", "defghi")
-str_pad(x, 10) # default pads on left
-str_pad(x, 10, side="both")
-```
-
-You can pad with other characters by using the `pad` argument:
-
-```{r}
-str_pad(x, 10, side="both", pad='-')
-```
-
-`str_pad()` will never make a string shorter:
-
-```{r}
-str_pad(x, 4)
-```
-
-### `str_trim()`
-
-The opposite of `str_pad()` is `str_trim()`, which removes leading and
-trailing whitespace:
+---
+# `str_trim()`: Remove excess white space
 
 ```{r}
 x <- c("  a   ", "b   ",  "   c")
-str_trim(x)
-str_trim(x, "left")
+x
 ```
-
-### `str_wrap()`
-
-You can use `str_wrap()` to modify existing whitespace in order to wrap
-a paragraph of text, such that the length of each line is as similar as
-possible.
-
+--
 ```{r}
-jabberwocky <- str_c(
-"`Twas brillig, and the slithy toves ",
-"did gyre and gimble in the wabe: ",
-"All mimsy were the borogoves, ",
-"and the mome raths outgrabe. "
-)
-cat(str_wrap(jabberwocky, width = 40))
+str_trim(x) # Default trims both sides 
+```
+--
+```{r}
+str_trim(x, side = "left") # Only trim left side
+```
+--
+```{r}
+str_trim(x, side = "right") # Only trim right side
 ```
 
-## Case conversion
+---
+# `str_pad()`: Add white space
 
-You can convert whole strings to lower-case, upper-case, and title-case using some conveniently-named functions:
+--
+```{r}
+x <- c("abc", "defghi")
+x
+```
+--
+```{r}
+str_pad(x, 10) # Default pads on left
+```
+--
+```{r}
+str_pad(x, 10, side = "both") # Pad both sides
+```
+--
+Pad with a different character:
+```{r}
+str_pad(x, 10, side = "both", pad = '*')
+```
 
+---
+# Case conversion: `str_to_lower()`, `str_to_upper()`, `str_to_title()`
+
+We saw these in HW 1!
 ```{r}
 x <- "Want to hear a joke about paper? Never mind, it's tearable."
+x
 ```
 ```{r}
-str_to_lower(x)
+str_to_lower(x) 
 str_to_upper(x)
 str_to_title(x)
 ```
 
-## String ordering and sorting
-
-You can sort a vector of strings alphabetically using `str_sort()` and `str_order()`:
+---
+# Sort string vectors alphabetically
 
 ```{r}
 x <- c('Y', 'M', 'C', 'A')
+x
 ```
+--
 ```{r}
 str_sort(x)
+```
+--
+```{r}
 str_sort(x, decreasing = TRUE)
+```
+--
+```{r}
 str_order(x)
+```
+--
+```{r}
 x[str_order(x)]
 ```
 
-# Splitting strings
+---
+# `str_split()`: Split a string into multiple strings
 
-## Splitting with `str_split()`
-
-Use `str_split()` to split a string up into pieces along a particular delimiter.
-
+--
 ```{r}
-string <- 'This string has spaces-and-dashes'
+x <- 'This string has spaces-and-dashes'
+x
 ```
+--
 ```{r}
-str_split(string, " ") # Split on the spaces
+str_split(x, " ") # Split on the spaces
 ```
+--
 ```{r}
-str_split(string, "-") # Split on the dashes
-```
-
-By default, `str_split()` returns a `list` (another R data structure) of vectors. Each item in the list is a vector of strings. In the above cases, we gave `str_split()` a single string, so there is only one item in the returned list. In these cases, the easiest way to access the resulting vector of split strings is to use the double bracket `[[]]` operator to access the first list item:
-
-```{r}
-str_split(string, " ")[[1]] # Returns a vector
+str_split(x, "-") # Split on the dashes
 ```
 
-If you give `str_split()` a vector of strings, it will return a list of length equal to the number of elements in the vector:
+---
+# What's with the `[[1]]` thing?
 
+--
+`str_split()` returns a `list` of vectors
+--
+Example:
 ```{r}
-stringVector <- c(string, string, string)
-str_split(stringVector, "-") # Returns a list with three elements
+x <- c('babble', 'scrabble')
+str_split(x, 'bb')
+```
+--
+If you're only splitting one string, add `[[1]]` to get the first vector:
+```{r}
+str_split('hooray', 'oo')[[1]]
 ```
 
-If you want to split a string up into its individual characters, use the empty string `""` as the delimiter:
+---
+# Common splits
 
+--
+Break a string into individual characters:
 ```{r}
-str_split(string, "")[[1]]
+str_split("apples", "")[[1]]
+```
+--
+Break a sentence into individual words:
+```{r}
+x <- "If you want to view paradise, simply look around and view it"
+str_split(x, " ")[[1]]
 ```
 
-## Word extraction with `word()`
 
-The `word()` function that another way to split up a longer string. It is designed to extract words from a sentence. You use `word()` by by passing it a `string` together with a `start` position of the first word to extract and an `end` position of the last word to extract. By default, the separator `sep` used between words is a single space. Here's some examples:
 
-```{r}
-sentence <- c("Be the change you want to be")
-```
-```{r}
-# Extract first word
-word(sentence, 1)
 
-# Extract second word
-word(sentence, 2)
 
-# Extract last word
-word(sentence, -1)
 
-# Extract all but the first word
-word(sentence, 2, -1)
-```
+
+
+
+
+
+
+
 
 # Matching strings
 
