--- a/classNotes/7-strings/slides-7-strings.Rmd
+++ b/classNotes/7-strings/slides-7-strings.Rmd
@@ -144,22 +144,22 @@ head(fruit)
 ---
 # Main **stringr** functions
 
-|Function          |  Description                            |
-|:-----------------|:----------------------------------------|
-|`str_to_lower(x)` | converts string to lower case           |
-|`str_to_upper(x)` | converts string to upper case           |
-|`str_to_title(x)` | converts string to title case           |
-|`str_length()`    | number of characters                    |
-|`str_sub()`       | extracts substrings                     |
-|`str_dup()`       | duplicates characters                   |
-|`str_trim()`      | removes leading and trailing whitespace |
-|`str_pad()`       | pads a string                           |
-|`str_c()`         | string concatenation                    |
-|`str_split()`     | split a string into a vector            |
-|`str_sort()`      | sort a string alphabetically            |
-|`str_order()`     | get the order of a sorted string        |
-|`str_detect()`    | match a string in another string        |
-|`str_replace()`   | replace a string in another string      |
+|Function         |  Description                            |
+|:----------------|:----------------------------------------|
+|`str_to_lower()` | converts string to lower case           |
+|`str_to_upper()` | converts string to upper case           |
+|`str_to_title()` | converts string to title case           |
+|`str_length()`   | number of characters                    |
+|`str_sub()`      | extracts substrings                     |
+|`str_dup()`      | duplicates characters                   |
+|`str_trim()`     | removes leading and trailing whitespace |
+|`str_pad()`      | pads a string                           |
+|`str_c()`        | string concatenation                    |
+|`str_split()`    | split a string into a vector            |
+|`str_sort()`     | sort a string alphabetically            |
+|`str_order()`    | get the order of a sorted string        |
+|`str_detect()`   | match a string in another string        |
+|`str_replace()`  | replace a string in another string      |
 
 ---
 # Case conversion
@@ -315,7 +315,7 @@ str_to_upper(x)
 ---
 # Quick practice: Think-Pair-Share
 
-1) Create the string `x <- 'thisIsGoodPractice'`
+1) Create this string object: `x <- 'thisIsGoodPractice'`
 
 2) Use `stringr` functions to transform `x` into the following strings:
 
@@ -529,6 +529,11 @@ y <- c('hello', 'world')
 - `str_split()`
 
 ---
+# 5 minute break - stand up, move around, stretch!
+
+### [5 minutes](https://www.youtube.com/watch?v=_W0bSen8Qjg)
+
+---
 # Sort string vectors alphabetically
 
 `str_sort()`
@@ -672,61 +677,78 @@ str_detect(tenFruit, "e$")
 
 1) For these questions, we'll use the `fruit` vector:
 
-```{r, eval=FALSE}
+```{r}
 head(fruit)
 ```
+<br>
 
 2) Use `stringr` functions to answer the following questions about the `fruit` vector:
 
-- How many fruit have the string "berry" in it?
-sum(str_detect(fruit, "berry"))
-- Which fruit contain more than one `o` characters?
-fruit[str_count(fruit, "o") > 1]
+- How many fruit have the string `"berry"` in it?
+- Which fruit end with string `"fruit"`?
+- Which fruit contain more than one `"o"` character?
 
 **Hint**: You'll need these:
 - `str_detect()`
 - `str_count()`
 
-
-
-
-
-
-
 ---
-# `str_replace()`: Replace matched strings with new string
+# Replace matched strings with new string
+
+`str_replace(string, pattern, replacement)`
+<br>
+<br>
 
 --
 Example:
 ```{r}
 x <- c("apple", "pear", "banana")
 ```
+<br>
+
 --
 ```{r}
 str_replace(x, "a", "-")
 ```
+<br>
+
 --
 ```{r}
 str_replace_all(x, "a", "-")
 ```
 
-
 ---
-# Practice: Think-Pair-Share
+# Practice Redux
 
+Remember this task earlier?
 
+```{r}
+x <- 'this_is_good_practice'
+```
 
+Convert `x` into: `"this is good practice"`
+<br>
+<br>
 
+--
+We did this earlier:
+```{r}
+str_c(str_split(x, "_")[[1]], collapse = " ")
+```
+<br>
 
-
-
+--
+But now we can do this!
+```{r}
+str_replace_all(x, "_", " ")
+```
 
 ---
 # Practice: Think-Pair-Share
 
 `getUniqueChars(s)`
 
-Write a function that takes a single string, `s`, and returns a _sorted_ vector of the unique characters the string below. All letters should be lowercase (so `"A"` should be treated the same as `"a"`).
+Write a function that takes a single string, `s`, and returns an _alphabetically sorted_ vector of the unique characters the string below. All letters should be lowercase (so `"A"` should be treated the same as `"a"`).
 
 Example:
 ```{r, eval=FALSE}
@@ -748,19 +770,11 @@ getUniqueChars <- function(s) {
 }
 ```
 
-
-
-
-
-
-
-
 ---
 # Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
-.pull-left[
 1) `reverseString(s)`
 
 Write a function that returns the string in reverse order. So if `s` equals `"abcde"`,  `reverseString(s)` should equal `"edcba"`. You may assume that `s` only contains upper and/or lower case letters, but your solution must correctly return capital letters in their appropriate order. Here's some test cases:
@@ -768,10 +782,7 @@ Write a function that returns the string in reverse order. So if `s` equals `"ab
 - `reverseString("aWordWithCaps") == "spaChtiWdroWa"`
 - `reverseString("abcde") == "edcba"`
 - `reverseString("") == ""`
-- `reverseString("aa") == "aa"`
-]
 
-.pull-right[
 2) `isPalindrome(s)`
 
 Write a function that returns `TRUE` if the string `s` is a [Palindrome](https://en.wikipedia.org/wiki/Palindrome) and `FALSE` otherwise. The string `s` can contains any letter, number, or symbol, but it will be a character data type. Here's some test cases:
@@ -780,32 +791,23 @@ Write a function that returns `TRUE` if the string `s` is a [Palindrome](https:/
 - `isPalindrome("abcb") == FALSE`
 - `isPalindrome("321123") == TRUE`
 
-]
-
 ---
 # Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
-.pull-left[
 1) `sortString(s)`
 
-Write the function `sortString(s)` that takes a string `s` and returns back an alphabetically sorted string. So `sortString("cba")` should return `"abc"`. You may assume that `s` only contains upper and/or lower case letters. Here's some test cases:
+Write the function `sortString(s)` that takes a string `s` and returns back an alphabetically sorted string. Assume that `s` only contains upper and/or lower case letters. Here's some test cases:
 
 - `sortString("cba") == "abc"`
 - `sortString("abedhg") == "abdegh"`
 - `sortString("AbacBc") == "aAbBcc"`
 
-]
-
-.pull-right[
 2) `areAnagrams(s1, s2)`
 
-**Background**: An [anagram](https://en.wikipedia.org/wiki/Anagram) is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once. With that in mind, write the function `areAnagrams(s1, s2)` that takes two strings, `s1` and `s2` (that you may assume contain only upper and/or lower case letters), and returns `TRUE` if the strings are anagrams, and `FALSE` otherwise. Treat `"a"` and `"A"` as the same letters (so `"Aba"` and `"BAA"` are anagrams). Hint: you can use either `sortString(s)` or `letterCount(s)` as a helper function - each are helpful for different approaches to solving this. Here's some test cases:
+Write the function `areAnagrams(s1, s2)` that takes two strings, `s1` and `s2`, and returns `TRUE` if the strings are [anagrams](https://en.wikipedia.org/wiki/Anagram), and `FALSE` otherwise. Treat lower and upper case as the same letters. Here's some test cases:
 
 - `areAnagrams("", "") == TRUE`
-- `areAnagrams("abCdabCd", "abcdabcd") == TRUE`
-- `areAnagrams("abcdaBcD", "AAbbcddc") == TRUE`
-- `areAnagrams("abcdaabcd", "aabbcddcb") == FALSE`
-
-]
+- `areAnagrams("TomMarvoloRiddle", "IAmLordVoldemort") == TRUE`
+- `areAnagrams("aabbccdd", "bbccddee") == FALSE`
