--- a/classNotes/7-strings/slides-7-strings.Rmd
+++ b/classNotes/7-strings/slides-7-strings.Rmd
@@ -22,7 +22,24 @@ output:
 # Announcements
 
 --
-1) If you haven't already, install the **stringr** library:
+### 1) You have **3** weeks for HW 4
+<br>
+
+--
+### 2) Exam 1:
+
+- ### 100 minutes (1 hr 40 min)
+- ### Weeks 1-6 (no strings)
+- ### No Turtle Graphics
+
+<br>
+
+--
+###  3) **This week**: Instead of office hours, we'll have an exam review
+
+---
+# Install the `stringr` library
+
 ```{r eval=FALSE}
 install.packages("stringr")
 library(stringr)
@@ -30,15 +47,6 @@ library(stringr)
 ```{r echo=FALSE}
 library(stringr)
 ```
-<br>
-
---
-2) You have **3** weeks for HW 4
-<br>
-<br>
-
---
-3) **This week**: Instead of office hours, we'll have an exam review
 
 ---
 # Making a string
